tdf#56408: Brackets are not handled correctly with mixed languages texts

I add some changes in the code and now line breaking cut the word
(character by character) in the different script depending on the
available space in the line.

Change-Id: I0a880139cb5da19b242878ca437f0a969c8c46cd